View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026995 | Open CASCADE | OCCT:Visualization | public | 2015-12-15 12:13 | 2016-04-20 15:50 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.3.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026995: Visualization, TKXCAF - do not reset custom material within XCAFPrs_AISObject::Compute() | ||||
Description | XCAFPrs_AISObject::Compute() resets material to Graphic3d_NOM_PLASTIC if presentation owner is not TPrsStd_AISPresentation. This makes assigning custom material impossible. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26995 has been created by kgv. SHA-1: 83d1c6db475f810651b3416316a9e741caa08c73 Detailed log of new commits: Author: kgv Date: Tue Dec 15 12:14:41 2015 +0300 0026995: Visualization, TKXCAF - do not reset custom material within XCAFPrs_AISObject::Compute() Assign default material in class constructor instead. |
|
Patch is ready for review in branch CR26995. |
|
Branch CR26995 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR26995 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 83d1c6db475f810651b3416316a9e741caa08c73 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 134 (134 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 93332604 / 94008928 [-0.72%] Total CPU difference: 19699.459999999453 / 19024.029999999882 [+3.55%] products component : Total MEMORY difference: 26228384 / 26097898 [+0.50%] Total CPU difference: 6891.299999999954 / 7353.209999999995 [-6.28%] Testing on Windows: occt component : Total MEMORY difference: 56335292 / 56348011 [-0.02%] Total CPU difference: 17778.04556109892 / 17820.446632898893 [-0.24%] products component : Total MEMORY difference: 16516511 / 16529851 [-0.08%] Total CPU difference: 5637.8449397999775 / 5737.9039811999755 [-1.74%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR26995 is TESTED. |
|
Branch CR26995 has been deleted by kgv. SHA-1: 83d1c6db475f810651b3416316a9e741caa08c73 |
occt: master 905db769 2015-12-15 09:14:41 Committer: bugmaster Details Diff |
0026995: Visualization, TKXCAF - do not reset custom material within XCAFPrs_AISObject::Compute() Assign default material in class constructor instead. |
Affected Issues 0026995 |
|
mod - src/XCAFPrs/XCAFPrs_AISObject.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-12-15 12:13 | kgv | New Issue | |
2015-12-15 12:13 | kgv | Assigned To | => kgv |
2015-12-15 12:15 | kgv | Severity | minor => trivial |
2015-12-15 12:17 | git | Note Added: 0049135 | |
2015-12-15 12:18 | kgv | Note Added: 0049136 | |
2015-12-15 12:18 | kgv | Assigned To | kgv => san |
2015-12-15 12:18 | kgv | Status | new => resolved |
2015-12-15 12:19 | kgv | Product Version | 6.9.1 => 6.3.1 |
2015-12-15 16:23 | san | Note Added: 0049166 | |
2015-12-15 16:23 | san | Assigned To | san => bugmaster |
2015-12-15 16:23 | san | Status | resolved => reviewed |
2015-12-15 16:30 |
|
Assigned To | bugmaster => mkv |
2015-12-16 12:33 |
|
Note Added: 0049201 | |
2015-12-16 12:33 |
|
Note Added: 0049202 | |
2015-12-16 12:33 |
|
Assigned To | mkv => bugmaster |
2015-12-16 12:33 |
|
Status | reviewed => tested |
2015-12-16 12:33 |
|
Test case number | => Not needed |
2015-12-18 15:25 | bugmaster | Changeset attached | => occt master 905db769 |
2015-12-18 15:25 | bugmaster | Status | tested => verified |
2015-12-18 15:25 | bugmaster | Resolution | open => fixed |
2016-04-17 13:54 | git | Note Added: 0053005 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |