0026995: Visualization, TKXCAF - do not reset custom material within XCAFPrs_AISObject::Compute()

Assign default material in class constructor instead.